force-app/main/default/objects/Account/fields/Amazon_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Amazon Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>