force-app/main/default/objects/Account/fields/Calc_3rd_GS_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_3rd_GS_Complete_Status__c</fullName>
    <label>3rd GS Complete Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Yes</fullName>
            </value>
            <value>
                <fullName>3 Opt Out</fullName>
            </value>
            <value>
                <fullName>2 No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>