force-app/main/default/objects/Account/fields/Calc_DFX_Pre_Visit_Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_DFX_Pre_Visit_Checklist_Status__c</fullName>
    <description>&quot;IF(CountSubString(ToUpper(OSS_Configured),&quot;&quot;COMPLETE&quot;&quot;)&gt;0 &amp;
CountSubString(ToUpper(AL_Configured),&quot;&quot;COMPLETE&quot;&quot;)&gt;0 &amp;
Visit_Website_?_Scheduler_App==&quot;&quot;WORKING WELL&quot;&quot; &amp;
DMS_Reviewed==&quot;&quot;NO CONCERNS&quot;&quot; &amp;
Verify_DMS_IDs==&quot;&quot;WORKING WELL&quot;&quot; &amp;
Factory_Pricing==&quot;&quot;COMPLETED&quot;&quot; &amp;
Dealer_Pricing==&quot;&quot;COMPLETED&quot;&quot; &amp;
Concerns_Pricing==&quot;&quot;COMPLETED&quot;&quot; &amp;
Triage_Pricing==&quot;&quot;COMPLETED&quot;&quot; &amp;
MVP_Pricing==&quot;&quot;COMPLETED&quot;&quot;,
&quot;&quot;Complete&quot;&quot;,&quot;&quot;Incomplete&quot;&quot;)&quot;</description>
    <label>DFX Pre-Visit Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>