force-app/main/default/objects/Account/fields/Calc_DMS_Integration_Completed__c.field-meta.xml
<CustomField>
    <fullName>Calc_DMS_Integration_Completed__c</fullName>
    <description>IF(DMS_Integration_Completed==&quot;&quot;,&quot;Incomplete&quot;,&quot;Complete&quot;)</description>
    <label>DMS Integration Completed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>