force-app/main/default/objects/Account/fields/Calc_Go_Live_Demo_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_Go_Live_Demo_Data_Status__c</fullName>
    <description>IF(Go_Live_Date==&quot;&quot;,&quot;Incomplete&quot;,&quot;Complete&quot;)</description>
    <label>Calc Go Live Demo Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>