force-app/main/default/objects/Account/fields/Calc_Go_Live_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Calc_Go_Live_Demo_Date__c</fullName>
    <label>Calc_Go_Live_Demo_Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>