force-app/main/default/objects/Account/fields/Calc_GS_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Calc_GS_Enrolled__c</fullName>
    <label>GS Enrolled Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Enrolled</fullName>
            </value>
            <value>
                <fullName>2 Opt Out</fullName>
            </value>
            <value>
                <fullName>3 No Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>