force-app/main/default/objects/Account/fields/Calc_GS_Trained__c.field-meta.xml
<CustomField>
    <fullName>Calc_GS_Trained__c</fullName>
    <label>GS Trained Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Trained</fullName>
            </value>
            <value>
                <fullName>3 Opt Out</fullName>
            </value>
            <value>
                <fullName>4 No Action</fullName>
            </value>
            <value>
                <fullName>2 Enrolled Not Trained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>