force-app/main/default/objects/Account/fields/Calc_Hardware_Network_Complete__c.field-meta.xml
<CustomField>
    <fullName>Calc_Hardware_Network_Complete__c</fullName>
    <label>Hardware Network Complete Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>