force-app/main/default/objects/Account/fields/Calc_Installation_Step_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_Installation_Step_Status__c</fullName>
    <description>&quot;case((Consent_Form==&quot;&quot;Yes&quot;&quot; &amp;
HW_Status != &quot;&quot;&quot;&quot; &amp;
HW_Status==&quot;&quot;Install Completed&quot;&quot; &amp;
Set_Up_Wizard_Completed == &quot;&quot;Complete&quot;&quot; &amp;
DMS_Auth_Form_Received_ALL != &quot;&quot;&quot;&quot; &amp;
DMS_Integration_Completed != &quot;&quot;&quot;&quot; &amp;
(Pricing_Wizard_Completed==&quot;&quot;Complete&quot;&quot; | (Pricing_Wizard_Express_1_Completed!=&quot;&quot;&quot;&quot; &amp; Pricing_Wizard_Express_2_Completed!=&quot;&quot;&quot;&quot;)) &amp;
int(No_of_OpCodes_Missing) &lt; 200 &amp;
OSS_Ledger_Call_Complete != &quot;&quot;&quot;&quot; &amp;
Go_Live_Date != &quot;&quot;&quot;&quot;),&quot;&quot;Complete&quot;&quot;,
true,&quot;&quot;Incomplete&quot;&quot;)&quot;</description>
    <label>Installation Step Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>