force-app/main/default/objects/Account/fields/Calc_Is_Integrated__c.field-meta.xml
<CustomField>
    <fullName>Calc_Is_Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>&quot;CASE(
DMS_Integration_Status == &quot;&quot;Complete - Pull &amp; Push&quot;&quot;, true,
DMS_Integration_Status == &quot;&quot;Complete - Pull Only&quot;&quot;, true,
true, false
)&quot;</description>
    <label>Is Integrated</label>
    <type>Checkbox</type>
</CustomField>