force-app/main/default/objects/Account/fields/Calc_Op_Codes_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_Op_Codes_Status__c</fullName>
    <description>IF(int(No_of_OpCodes_Missing)&lt;200,&quot;Complete&quot;,&quot;Incomplete&quot;)</description>
    <label>Op Codes Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>