force-app/main/default/objects/Account/fields/Calc_Satisfaction_with_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_Satisfaction_with_Training_Status__c</fullName>
    <description>&quot;CASE(Satisfaction_with_Training==&quot;&quot;5 - VERY SATISFIED&quot;&quot;|
Satisfaction_with_Training==&quot;&quot;4 - SOMEWHAT SATISFIED&quot;&quot;, &quot;&quot;Green&quot;&quot;,
Satisfaction_with_Training==&quot;&quot;&quot;&quot;|
Satisfaction_with_Training==&quot;&quot;Please Select One&quot;&quot;,&quot;&quot;NA&quot;&quot;,
true,&quot;&quot;Red&quot;&quot;)&quot;</description>
    <label>Satisfaction with Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>