force-app/main/default/objects/Account/fields/Calc_SM_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_SM_Engagement_Status__c</fullName>
    <description>&quot;CASE(Service_Manager_buyin_or_engagement==&quot;&quot;5 - VERY ENGAGED&quot;&quot;|
Service_Manager_buyin_or_engagement==&quot;&quot;4 - SOMEWHAT ENGAGED&quot;&quot;, &quot;&quot;Green&quot;&quot;,
Service_Manager_buyin_or_engagement==&quot;&quot;&quot;&quot;,&quot;&quot;NA&quot;&quot;,
true,&quot;&quot;Red&quot;&quot;)&quot;</description>
    <label>SM Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>