force-app/main/default/objects/Account/fields/Calc_Welcome_Call_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_Welcome_Call_Completed_Status__c</fullName>
    <label>Welcome Call Completed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>