force-app/main/default/objects/Account/fields/Calc_wiAdvisor_Status__c.field-meta.xml
<CustomField>
    <fullName>Calc_wiAdvisor_Status__c</fullName>
    <description>&quot;CASE(
 (Status == &apos;Live&apos; &amp; Go_Live_Date &gt; Opt_Out_Date), &apos;1 Enrolled and Live&apos;,
 (Consent_Form == &apos;Yes&apos; &amp; Status == &apos;Live&apos; &amp; wiADVISOR_Consent_Date &gt; Opt_Out_Date), &apos;2 Enrolled&apos;,
 (Opt_Out_Date != &apos;&apos;), &apos;3 Opt Out&apos;,
 true, &quot;&quot;4 No Action&quot;&quot;
)&quot;</description>
    <label>wiAdvisor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>