force-app/main/default/objects/Account/fields/CC_AllHoursIndicator__c.field-meta.xml
<CustomField>
    <fullName>CC_AllHoursIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if the Site/Call Center provides 24/7 support.</description>
    <label>All Hours Indicator</label>
    <type>Checkbox</type>
</CustomField>