force-app/main/default/objects/Account/fields/CC_AlternatePhone__c.field-meta.xml
<CustomField>
    <fullName>CC_AlternatePhone__c</fullName>
    <description>added for data migration from CAIR, which may have 2 phone numbers per vehicle owner.</description>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>