force-app/main/default/objects/Account/fields/CC_AM2__c.field-meta.xml
<CustomField>
    <fullName>CC_AM2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>new filed created for nclp 4 requirement</description>
    <label>Area Manager 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>